--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+/* Mobile First approach is followed */
+
 * {
     padding: 0;
     margin: 0;
@@ -8,7 +10,32 @@ html {
     font-size: 62.5%;
 }
 
-#input-field {
+body {
+    overflow-x: hidden;
+    min-height: 100vh;
+}
+
+
+.navigation {
+    background: linear-gradient(200deg, rgba(211, 122, 255 ,0.5) 0%, rgba(248,244,252,1) 100%, rgba(255,255,255,1) 100%);
+    box-shadow: 1px 0px 4rem gray;
+}
+
+.brand {
+    font-size: 4rem;
+    letter-spacing: 3px;
+    padding-top: 1.5rem;
+    margin-left: 1.5rem;
+}
+
+.logo {
+    float: right;
+    margin-top: -6.5rem;
+    margin-right: 2rem;
+}
+
+
+.search-bar {
     font-size: 3rem;
     font-weight: 300;
     border-color: blueviolet;
@@ -18,106 +45,19 @@ html {
     border-top-width: 0.7px;
 }
 
-#input-field::placeholder {
+.search-bar::placeholder {
     font-weight: 300;
     opacity: 0.3;   
 }
 
-#navi {
-    background: linear-gradient(200deg, rgba(211, 122, 255 ,0.5) 0%, rgba(248,244,252,1) 100%, rgba(255,255,255,1) 100%);
-    box-shadow: 1px 0px 4rem gray;
-}
 
-#logo {
-    float: right;
-    margin-top: -6.5rem;
-    margin-right: 2rem;
-}
-
-#display {
-    font-size: 4rem;
-    letter-spacing: 3px;
-    padding-top: 1.5rem;
-    margin-left: 1.5rem;
-}
-
-#hero {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-#body {
-    border-radius: 3rem;
-    background-color: rgb(248, 244, 252);
-    margin: 25rem 2rem 0 2rem;
-    width: 85%;
-}
-
-#card {
-    box-shadow: 0 0 2rem rgb(173, 216, 230);
-    border-radius: .7rem;
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 40rem;
-    align-items: center;
-}
-
-#card:hover {
-    cursor: pointer;
-}
-
-#card:active {
-    box-shadow: none;
-}
-
-#card-body {
-    margin: 0 2rem;
-}
-
-#thumbnail {
-    border: 2px solid rgb(138, 43, 226);
-    border-radius: .5rem;
-    margin-top: 10%;
-    width: 90%;
-}
-
-#line {
-    background-color: blueviolet;
-    height: .2rem;
-}
-
-#line1 {
-    background-color: blueviolet;
-    height: .4rem;
-}
-
-#title {
-    font-size: 2.7rem;
-    font-weight: 400;
-    text-align: center;
-    color: rgb(52, 0, 112);
-    text-overflow: ellipsis;
-}
-
-#title:active {
-    color: hotpink;
-}
-
-#video-container {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 3rem;
-    margin-top: 4rem;
-    width: 100%;
-    height: 30rem;
+.video-box-container {
+    margin: 4rem auto;
     border-radius: 2rem;
     background: linear-gradient(20deg, rgba(211, 122, 255 ,0.5) 20%, rgba(248,244,252,1) 100%, rgba(255,255,255,1) 100%);
 }
 
-#videobox {
+.video-box {
     margin-top: 5rem;
     width: 100%;
     height: 25rem;
@@ -126,28 +66,94 @@ html {
     padding: 0 1.5rem;
 }
 
-#video {
+.video {
     width: 100%;
     height: 100%;
     border-radius: 1rem;
 }
 
-#video-title {
+.video-title {
     padding: 3rem 3rem 0 3rem;
-    font: 3rem sans-serif;
+    font: 2.1rem sans-serif;
+    line-height: 160%;
     white-space: pre-wrap;
 }
 
-#video-description {
-    padding: 0 3rem;
+.video-description {
+    padding: 0 3rem 3rem 3rem;
     word-wrap: break-word;
-    font-size: 2.4rem;
+    font-size: 1.6rem;
     font-weight: 400;
 }
 
-#footer {
+.line1 {
+    background-color: blueviolet;
+    height: .4rem;
+}
+
+
+.hero-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.hero {
+    border-radius: 3rem;
+    background-color: rgb(248, 244, 252);
+    margin: 5.5rem 2rem;
+    width: 85%;
+}
+
+
+.card {
+    box-shadow: 0 0 2rem rgb(173, 216, 230);
+    border-radius: .7rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 40rem;
+    align-items: center;
+    cursor: pointer;
+}
+
+.card:active {
+    box-shadow: none;
+}
+
+.thumbnail {
+    border: 2px solid rgb(138, 43, 226);
+    border-radius: .5rem;
+    margin-top: 10%;
+    width: 90%;
+}
+
+.card-body {
+    margin: 0 2rem;
+}
+
+.card-title {
+    font-size: 1.9rem;
+    font-weight: 400;
+    text-align: center;
+    line-height: 180%;
+    color: rgb(52, 0, 112);
+    text-overflow: ellipsis;
+}
+
+.card-title:active {
+    color: hotpink;
+}
+
+.line2 {
+    background-color: blueviolet;
+    height: .2rem;
+}
+
+
+.footer {
     padding: 2rem;
-    margin-top: 6rem;
     background: linear-gradient(20deg, rgba(211, 122, 255 ,0.5) 40%, rgba(248,244,252,1) 100%, rgba(255,255,255,1) 100%);
     text-align: center;
     font-size: 1.5rem;
@@ -156,11 +162,10 @@ html {
 
 
 @media (min-width: 400px) {
-    #video-container {
-        margin: 4rem auto;
+    .video-box-container {
         width: 85%;
     }
-    #body {
+    .hero {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         width: 100%;
@@ -168,26 +173,29 @@ html {
 }
 
 @media (min-width: 700px) {
-    #videobox {
-        height: 40rem;
+    .video-box {
+        height: 70vh;
     }
-    #card {
+    .video-title {
+        font-size: 3rem;
+    }
+    .video-description {
+        font-size: 2rem;
+    }
+    .card {
         height: 50rem;
         overflow-y: hidden;
     }
-    #body {
-        margin: 47rem 2rem 0 2rem;
+    .card-title {
+        font-size: 2.3rem;
+    }
+    .hero {
+        margin: 10rem 2rem;
     }
 }
 
 @media (min-width: 950px) {
-    #videobox {
-        height: 70rem;
-    }
-    #card {
+    .card {
         height: 60rem;
-    }
-    #body {
-        margin: 77rem 2rem 0 2rem;
     }
 }
